tests/functional/lang/parse-fail-unexpected-assert.err
error: syntax error, unexpected 'assert', expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:3:
            1| a.assert
             |   ^
            2|
